# pymoca

./: .env  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.local.md  CLAUDE.md  README.md  pyproject.toml  pythoncpp.py  setup.cfg  setup.py  tox.ini
.claude/plans/: compliance-test-plan.md
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml
doc/: CLAUDE.md  MLS3.5_study_notes.md  architecture.md  casadi_backend_user_guide.md  index.md  modelica_grammar.txt  pymoca_011_vs_new.ipynb  pymoca_011_vs_new_run_all.py
src/pymoca/: Modelica.g4  __main__.py  _version.py  ast.py  compiler.py  parser.py  tree.py
src/pymoca/.antlr/: Modelica.interp  ModelicaLexer.interp
src/pymoca/backends/casadi/: _options.py  api.py  generator.py  model.py
src/pymoca/backends/sympy/: generator.py  runtime.py
src/pymoca/tree/: __init__.py  _base.py  _flattening.py  _instantiation.py  _legacy.py  _listener.py  _name_lookup.py  instance.py
test/: alias_relation_test.py  ast_test.py  cache_test.py  compiler_test.py  compliance_test.py  conftest.py  conftest_parse.py  flatten_test.py  gen_casadi_test.py  gen_sympy_test.py  import_test.py  instantiate_test.py  msl_examples_test.py  name_lookup_test.py  parse_test.py  redeclare_test.py  speedy_antlr_test.py  xml_test.py
test/models/: ArrayConnectParam.mo  BaseModelicaHierarchical.mo  BaseModelicaScalarized.mo  ClassExtendsRedeclare.mo  ClockBuiltin.mo  Complex.mo  CompositeLookupViaExtends.mo  ConstantInModificationScope.mo  ConstantReferences.mo  DivInDimension.mo  EncapsulatedFullyQualifiedType.mo  EncapsulatedImportEnclosingPackage.mo  ExpandableConnectorBus.mo  ExtendsModification.mo  ExtendsOrder.mo  ExtendsPathMiddleConflict.mo  FlatteningRedeclareNested.mo  Import.mo  IndexedConnect.mo  InheritanceInstantiationResistor.mo  InheritedConnectorConnect.mo  InheritedEquationConnector.mo  InheritedTypeEnclosingScope.mo  InstantiationInLookup.mo  InstantiationLookupScope.mo  InstantiationTree.mo  LexicalVsInstanceScope.mo  ModificationScope.mo  ModificationScopeFlatten.mo  ModificationSubAttrAndValue.mo  MultipleExtendsArrayDim.mo  NestedClassesTwoDeep.mo  NestedClassesTwoDeep2.mo  NestedExtendsModification.mo  NestedModificationArgScope.mo  NonReplaceableContainsReplaceable.mo  RecursiveInstantiation.mo  RedeclareClass.mo  RedeclareClassExtends.mo  RedeclareComponentComplicated.mo  (+16 more)
tools/: benchmark.md  benchmark.py  compiler.py  compiler2.py  create_conda_env.sh  flatten_msl_examples.py  process_msl_examples.py
tools/rtc_tools_benchmark/: .gitignore  README.md  RESULTS.md  compare.py  run_all.py  run_benchmark.sh  sitecustomize.py
